@@ -21,6 +21,8 @@ dillo-2.2 [??]
  - Switched capi to use dlib's Dlist instead of a_List_* methods.
  - Remove empty cache entries on Stop-button press and new link request!
  - Fixed URL unescaping in the datauri DPI.
+ - Fixed the FTP dpi: download dialog works, empty cache-entry removal,
+   feedback page when file doesn't exist and streamed transfer of files.
    Patches: Jorge Arellano Cid
 +- Fix segfault from AREA when MAP is missing name attribute.
  - Fix image map coordinates when margin/border/padding present.
